# k8s-controller

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: pr.yml
src/: controller.rs  lib.rs
