[package]
name = "k8s-controller"
version = "0.4.1"
edition = "2021"
rust-version = "1.83.0"

description = "lightweight framework for writing kubernetes controllers"
repository = "https://github.com/MaterializeInc/k8s-controller"
readme = "README.md"
license = "Apache-2.0"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
kube = { version = "0.98.0", default-features = false, features = ["client"] }
kube-runtime = "1.0.0"
rand = "0.8"
serde = "1"
tracing = "0.1"

[dev-dependencies]
k8s-openapi = { version = "0.24", default-features = false, features = ["v1_30"] }
tokio = "1"
