[package]
name = "k8s-controller"
version = "0.6.1"
edition = "2024"
rust-version = "1.89.0"

description = "lightweight framework for writing kubernetes controllers"
repository = "https://github.com/MaterializeInc/k8s-controller"
readme = "README.md"
license = "Apache-2.0"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.26.0", default-features = false }
kube = { version = "2.0.0", default-features = false, features = ["client"] }
kube-runtime = "2.0.0"
rand = "0.9.0"
serde = "1"
tracing = "0.1"

[dev-dependencies]
k8s-openapi = { version = "0.26.0", default-features = false, features = ["v1_31"] }
tokio = "1"

[package.metadata.docs.rs]
features = ["k8s-openapi/latest"]
